bugfix/fixed-alignment-of-root-flex-component

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+html,body, #root {
+    @apply m-0 p-0 box-border;
+    height: 100%;
+    width: 100%;
+}
+
 :root{
     @apply m-0 p-0 box-border;
 }
